# image

./: CMakeLists.txt  README.md  version_acrion_image_generated.hpp.cmake
include/acrion/image/: bitmap.hpp  bitmap_data.hpp  color.hpp  interpolation.hpp  mixable_scalar.hpp  utility.hpp  vector.hpp  version_acrion_image.hpp
test/: test.cpp
